--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -18,5 +18,5 @@ jobs:
       - name: 🐳 Build and push images with Docker Compose
         run: |
           export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
-          docker-compose build
-          docker-compose push
+          docker compose build
+          docker compose push
