Build & Push Docker Images via Compose - edit

--- a/GaiaWeb/Dockerfile
+++ b/GaiaWeb/Dockerfile
@@ -6,9 +6,9 @@ EXPOSE 5001
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . .
-RUN dotnet publish GaiaWeb/GaiaWeb.csproj -c Release -o /app/publish
+RUN dotnet publish GaiaWeb/Web.csproj -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
-ENTRYPOINT ["dotnet", "GaiaWeb.dll"]
+ENTRYPOINT ["dotnet", "Web.dll"]
